fixed icon align

--- a/client/src/css/Portfolio.css
+++ b/client/src/css/Portfolio.css
@@ -33,7 +33,6 @@
 .portfolio-container .portfolio-bottom-nav {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   position: fixed;
   left: 0;
@@ -45,6 +44,7 @@
 
 .portfolio-container .portfolio-bottom-nav .icons-row {
   display: flex;
+  justify-content: space-between;
   gap: 3rem;
   color: rgb(90, 90, 90);
 }
